2009-11-28  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/mulmod_bnm1.c: Basecases made simpler,
	  this also corrects a bug affecting previous version.

2009-11-28  Torbjorn Granlund  <tege@gmplib.org>

	* Use TMP_ALLOC_LIMBS consistently.
	* Finish renaming BITS_PER_MP_LIMB to GMP_LIMB_BITS.

	* macos: Remove entire directory.

2009-11-27  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/corei/gmp-mparam.h: New file.
	* mpn/x86_64/core2/gmp-mparam.h: Now for just core2.
	* mpn/powerpc64/mode64/p3/gmp-mparam.h: New file.
	* mpn/powerpc64/mode64/p4/gmp-mparam.h: New file.
	* mpn/powerpc64/mode64/p5/gmp-mparam.h: New file.

	* config.guess: Return "corei" for core i7 and core i5.
	* config.sub: Recognise "corei".
	* acinclude.m4 (X86_64_PATTERN): Add corei.
	* configure.in (powerpc): Set up more CPU-specific paths.
	(x86): Handle corei.

	* mpz/powm.c: Allow input operand overlap also when exponent = 1.
	Misc cleanups.

2009-11-26  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/mpn/t-mulmod_bnm1.c: New test file.

	* mpn/generic/mullow_n.c: Comments on Mulders' trick implementation.

2009-11-26  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/powm.c: Make comments reflect current code state.

	* tests/devel/try.c: Make mpn_mullow_n testing actually work.

2009-11-25  Torbjorn Granlund  <tege@gmplib.org>

	* mpz/powm.c: Clean up unused defs.

2009-11-24  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c (tune_redc): Rewrite.
	* mpn/generic/powm.c: Use REDC_1_TO_REDC_2_THRESHOLD,
	REDC_1_TO_REDC_N_THRESHOLD, and REDC_2_TO_REDC_N_THRESHOLD.
	Get rid of previous REDC params, including LOCAL_REDC_N_THRESHOLD.
	(WANT_REDC_2): Define.
	* gmp-impl.h: Corresponding changes.

2009-11-23  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/powm.c: Fix typo.
	Define LOCAL_REDC_N_THRESHOLD, use in REDC_2_THRESHOLD...
	REDC_N_THRESHOLD chain.

2009-11-22  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c (tune_mullow): Set min_size to 1.
