@@ -5,6 +5,8 @@
 
 2009-11-28  Torbjorn Granlund  <tege@gmplib.org>
 
+	* mpn/generic/redc_n.c: Use mpn_mulmod_bnm1 instead of mpn_mul_n.
+
 	* Use TMP_ALLOC_LIMBS consistently.
 	* Finish renaming BITS_PER_MP_LIMB to GMP_LIMB_BITS.
 
